# STM32F1_VSCODE_Template

./: .cproject  .mxproject  .project  CMakeLists.txt  PLC_S.ioc  README.md  STM32F103RCTX_FLASH.ld  stm32cubef1.cmake
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
